[gd_scene load_steps=14 format=2]

[ext_resource path="res://GameHUDRelated/Tooltips/SynergyTooltipRelated/Subs/SynergyDifficultyPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameHUDRelated/Tooltips/SynergyTooltipRelated/SynergyTooltip.gd" type="Script" id=2]
[ext_resource path="res://GameHUDRelated/Tooltips/SynergyTooltipRelated/SynergyTooltipPic_top.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/Tooltips/SynergyTooltipRelated/SynergyTooltipPic_background.png" type="Texture" id=4]
[ext_resource path="res://GameHUDRelated/Tooltips/SynergyTooltipRelated/SynergyTooltipPic_bottom.png" type="Texture" id=5]
[ext_resource path="res://GameHUDRelated/LeftSidePanel/SynergyInfoPanel/Pics/Tier_None.png" type="Texture" id=6]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://Fonts/trajanpro/trajanpro-regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://GameHUDRelated/Tooltips/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 9
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 9
font_data = ExtResource( 7 )

[node name="SynergyTooltip" type="MarginContainer"]
margin_right = 217.0
margin_bottom = 107.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 217.0
margin_bottom = 107.0
mouse_filter = 2
custom_constants/separation = 0
alignment = 1

[node name="TooltipTopSprite" type="TextureRect" parent="VBoxContainer"]
margin_right = 217.0
margin_bottom = 9.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 1

[node name="MainContentContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 9.0
margin_right = 217.0
margin_bottom = 98.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 7
custom_constants/margin_left = 7

[node name="TooltipBodySprite" type="TextureRect" parent="VBoxContainer/MainContentContainer"]
margin_left = 7.0
margin_right = 210.0
margin_bottom = 89.0
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 1

[node name="Marginer" type="MarginContainer" parent="VBoxContainer/MainContentContainer"]
margin_left = 7.0
margin_right = 210.0
margin_bottom = 89.0
size_flags_vertical = 3
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainContentContainer/Marginer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 200.0
margin_bottom = 86.0
mouse_filter = 2
custom_constants/separation = 3

[node name="SynNameIconNumberContainer" type="HBoxContainer" parent="VBoxContainer/MainContentContainer/Marginer/VBoxContainer"]
margin_right = 197.0
margin_bottom = 14.0
custom_constants/separation = 3

[node name="SynIcon" type="TextureRect" parent="VBoxContainer/MainContentContainer/Marginer/VBoxContainer/SynNameIconNumberContainer"]
margin_right = 14.0
margin_bottom = 14.0
texture = ExtResource( 6 )

[node name="Marginer" type="MarginContainer" parent="VBoxContainer/MainContentContainer/Marginer/VBoxContainer/SynNameIconNumberContainer"]
margin_left = 17.0
margin_right = 197.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 1
custom_constants/margin_bottom = -1

[node name="SynName" type="Label" parent="VBoxContainer/MainContentContainer/Marginer/VBoxContainer/SynNameIconNumberContainer/Marginer"]
margin_top = 2.0
margin_right = 178.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sample"
valign = 1

[node name="NumOfTowers" type="Label" parent="VBoxContainer/MainContentContainer/Marginer/VBoxContainer/SynNameIconNumberContainer/Marginer"]
margin_left = 171.0
margin_top = 1.0
margin_right = 178.0
margin_bottom = 15.0
grow_horizontal = 0
size_flags_horizontal = 10
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "N"

[node name="SynTierAndProg" type="HBoxContainer" parent="VBoxContainer/MainContentContainer/Marginer/VBoxContainer"]
margin_top = 17.0
margin_right = 197.0
margin_bottom = 31.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainContentContainer/Marginer/VBoxContainer/SynTierAndProg"]
margin_right = 14.0
margin_bottom = 14.0

[node name="SynTier" type="TextureRect" parent="VBoxContainer/MainContentContainer/Marginer/VBoxContainer/SynTierAndProg/MarginContainer"]
margin_right = 14.0
margin_bottom = 14.0
texture = ExtResource( 6 )

[node name="Marginer" type="MarginContainer" parent="VBoxContainer/MainContentContainer/Marginer/VBoxContainer/SynTierAndProg/MarginContainer"]
margin_right = 14.0
margin_bottom = 14.0
custom_constants/margin_top = 1

[node name="SynTierLabel" type="Label" parent="VBoxContainer/MainContentContainer/Marginer/VBoxContainer/SynTierAndProg/MarginContainer/Marginer"]
margin_top = 2.0
margin_right = 14.0
margin_bottom = 12.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Marginer" type="MarginContainer" parent="VBoxContainer/MainContentContainer/Marginer/VBoxContainer/SynTierAndProg"]
margin_left = 18.0
margin_right = 48.0
margin_bottom = 14.0
custom_constants/margin_top = 1
custom_constants/margin_bottom = -1

[node name="SynTowersInTier" type="Label" parent="VBoxContainer/MainContentContainer/Marginer/VBoxContainer/SynTierAndProg/Marginer"]
margin_top = 3.0
margin_right = 30.0
margin_bottom = 13.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "x >> y"

[node name="DescContainer" type="MarginContainer" parent="VBoxContainer/MainContentContainer/Marginer/VBoxContainer"]
margin_top = 34.0
margin_right = 197.0
margin_bottom = 37.0
custom_constants/margin_top = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainContentContainer/Marginer/VBoxContainer/DescContainer"]
margin_top = 3.0
margin_right = 197.0
margin_bottom = 3.0
custom_constants/separation = 16

[node name="TooltipBody" parent="VBoxContainer/MainContentContainer/Marginer/VBoxContainer/DescContainer/VBoxContainer" instance=ExtResource( 9 )]
margin_right = 197.0
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )

[node name="SynergyDifficultyPanel" parent="VBoxContainer/MainContentContainer/Marginer/VBoxContainer/DescContainer/VBoxContainer" instance=ExtResource( 1 )]
visible = false
margin_top = 16.0
margin_right = 197.0
margin_bottom = 42.0

[node name="TooltipBottomSprite" type="TextureRect" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 217.0
margin_bottom = 107.0
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 1
